# regolith

./: CMakeLists.txt  LICENSE  README.md
docs/: API_SKETCH.md  ARCHITECTURE.md  PROJECT_PLAN.md  PROPOSAL.md  THREADING.md
include/regolith/: regolith.h  runner_sdl.h  types.h  world.h
src/: core.c  runner_sdl.c  world.c
tests/: test_main.c
